Deleted my model

--- a/webcam.html
+++ b/webcam.html
@@ -176,8 +176,8 @@
 
 <body onload="myFunction()">
     <div class="topnav">
-        <a href="">Image</a>
-        <a class="active" href="/webcam.html">Webcam</a>
+        <a href="/index.html">Image</a>
+        <a class="active">Webcam</a>
     </div>
     <div id="content">
         <div id="loader"></div>
